# policy-intent-scorer

./: Dockerfile  Makefile  README.md  biden.html  biden.text  docker-compose.yml  pyproject.toml
api/: score_api.py
api/templates/: index.html
config/: config.py
data/: current_whitehouse_20250807_145244.json  processed_archive_latest.parquet
model/: text_classifier_model.pkl
scripts/: archive_puller.py  ingest_lambda.py  labeler.py  test_train_model.py  train_model.py
scripts/market_data_cache/: market_data_20001219_20250806.pkl
services/: s3_service.py
src/policy_intent_score/: main.py
terraform/: .gitignore  main.tf  outputs.tf  variables.tf
tests/: test_archive_puller.py  test_ingest_lambda.py  test_labeler.py
