[project]
name = "policy-intent-score"
version = "0.1.0"
description = ""
authors = [
    {name = "isongjosiah",email = "isongjosiah@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi (>=0.116.1,<0.117.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "pandas (>=2.3.1,<3.0.0)",
    "scikit-learn (>=1.7.1,<2.0.0)",
    "requests (>=2.32.4,<3.0.0)",
    "beautifulsoup4 (>=4.13.4,<5.0.0)",
    "yfinance (>=0.2.65,<0.3.0)",
    "pyarrow (>=21.0.0,<22.0.0)",
    "feedparser (>=6.0.11,<7.0.0)",
    "boto3 (>=1.40.3,<2.0.0)"
]

[tool.poetry]
packages = [{include = "policy_intent_score", from = "src"}]

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
